@@ -314,6 +314,7 @@ sample/12f629_blink.jal
 sample/12f629_blink_intosc.jal
 sample/12f635_blink.jal
 sample/12f675_blink.jal
+sample/12f675_blink_intcal.jal
 sample/12f683_blink.jal
 sample/12f683_pwm_adc.jal
 sample/12hv609_blink.jal
