@@ -653,6 +653,36 @@ reading from (and must be passed with writing to) in the lower nibble
 Portx_low is read from or written to bits 3..0 of Portx,
 Portx_high is read from or written to bits 7..4 of Portx.
 
+<h2><a name="ch_osccal">About OSCCAL</a></h2>
+
+<p>A number of low end PICS have a reserved word in high memory, provided by
+the manufacturer, which contains information for calibration of the internal
+oscillator.
+When your PIC application needs the frequency of the internal oscillator to
+be accurate the OSCCAL register should be loaded with the provided value.
+This is not done automatically by compiler or device files.
+You may want to insert the following statements into the beginning of your
+program:
+<pre>
+  assembler
+    page call &lt;end-of-memory&gt;
+    bank movwf OSCCAL
+  end assembler
+</pre>
+In which you have to specify for &lt;end-of-memory&gt; the offset of the highest
+program memory word (see the appropriate dataset).
+For example when your PIC has 1K words of program memory you should specify
+0x3FF.
+
+<p>When the factory value is not correct or has been accidentally erased by
+a PIC programmer, you may also move your own value into OSCCAL, for example:
+<pre>
+   OSCCAL = &lt;value&gt;
+</pre>
+See the datasheet for acceptable values: frequently the low order bits
+should be zero.
+
+
 
 <h2>Naming convention for configuration bit fields (fuses)</h2>
 
