@@ -1,0 +1,49 @@
+-- ------------------------------------------------------
+-- Title: Blink-an-LED of the Microchip pic12f629
+--
+-- Author: Rob Hamerling, Copyright (c) 2008..2009, all rights reserved.
+--
+-- Adapted-by:
+--
+-- Compiler: 2.4l
+--
+-- This file is part of jallib  (http://jallib.googlecode.com)
+-- Released under the BSD license (http://www.opensource.org/licenses/bsd-license.php)
+--
+-- Description:
+-- Sample blink-an-LED program for Microchip PIC12f629.
+--
+-- Sources:
+--
+-- Notes:
+--  - File creation date/time: 6 Nov 2009 20:37:43.
+--
+-- ------------------------------------------------------
+--
+include 12f675                    -- target PICmicro
+--
+-- This program assumes a  4 MHz resonator or crystal
+pragma target clock  4_000_000     -- oscillator frequency
+-- configuration memory settings (fuses)
+pragma target OSC  INTOSC_NOCLKOUT -- Intternal oscillator
+pragma target WDT  disabled        -- no watchdog
+pragma target MCLR internal        -- make MCLR pin available I/O
+--
+enable_digital_io()                -- disable analog I/O (if any)
+--
+-- You may want to change the selected pin:
+alias   led      is pin_A0
+pin_A0_direction =  output
+--
+assembler
+  page call 0x3FF
+  bank movwf OSCCAL
+end assembler
+--
+forever loop
+   led = on
+   _usec_delay(250000)
+   led = off
+   _usec_delay(250000)
+end loop
+--
